--- a/package.json
+++ b/package.json
@@ -58,8 +58,14 @@
     "yargs": "^7.0.2"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "bulma": "^0.4.1",
+    "font-awesome": "^4.7.0",
     "logatim": "^0.9.0",
-    "vue": "^2.2.6",
-    "vue-router": "^2.4.0"
+    "vee-validate": "^2.0.0-rc.1",
+    "vue": "^2.3.0",
+    "vue-router": "^2.4.0",
+    "vuejs-paginator": "^2.0.1",
+    "vuex": "^2.2.1"
   }
 }
