--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "font-awesome": "^4.7.0",
     "logatim": "^0.9.0",
     "vee-validate": "^2.0.0-rc.1",
+    "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.3.0",
     "vue-router": "^2.4.0",
     "vuejs-paginator": "^2.0.1",
