--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "homepage": "https://github.com/VoIPGRID/voipgrid-frontend#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "browserify": "^14.1.0",
     "connect": "^3.6.0",
     "connect-mount": "^1.0.0",
     "envify": "^4.0.0",
+    "eslint": "^3.19.0",
     "gulp": "^3.9.1",
     "gulp-add-src": "^0.2.0",
     "gulp-babel": "^6.1.2",
@@ -61,12 +63,12 @@
     "axios": "^0.16.1",
     "bulma": "^0.4.1",
     "font-awesome": "^4.7.0",
-    "logatim": "^0.9.0",
     "vee-validate": "^2.0.0-rc.1",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.3.0",
+    "vue-paginate": "^3.4.0",
     "vue-router": "^2.4.0",
-    "vuejs-paginator": "^2.0.1",
+    "vuejs-paginate": "^0.9.0",
     "vuex": "^2.2.1"
   }
 }
