--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "browserify": "^14.1.0",
     "connect": "^3.6.0",
     "connect-mount": "^1.0.0",
+    "del": "^2.2.2",
     "envify": "^4.0.0",
     "eslint": "^3.19.0",
     "gulp": "^3.9.1",
@@ -39,13 +41,14 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
-    "gulp-envify": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-gzip": "^1.4.0",
     "gulp-help": "^1.6.1",
     "gulp-if-else": "^1.0.3",
     "gulp-jsdoc3": "^1.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.5.0",
