--- a/.eslintrc
+++ b/.eslintrc
@@ -18,8 +18,9 @@
         "templates": true,
         "axios": true,
         "csrf": true,
-        "VeeValidate": true,
-        "VueNotifications": true,
+        "Vuelidate": true,
+        "VueTranslated": true,
+        "I18n": true,
         "__state": true
     },
     "plugins": [
@@ -155,7 +156,7 @@
         "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
         "lines-around-comment": 0,
         "max-depth": [0, 4],
-        "max-len": [0, 80, 4],
+        "max-len": [1, {"code": 120, "tabWidth": 4, "comments": 80}],
         "max-nested-callbacks": [0, 2],
         "max-params": [0, 3],
         "max-statements": [0, 10],
@@ -185,7 +186,12 @@
         "spaced-line-comment": [0, "always"],
         "strict": [2, "global"],
         "use-isnan": 2,
-        "valid-jsdoc": 1,
+        "valid-jsdoc": [2, {
+            "prefer": {
+                "return": "returns"
+            },
+             "requireReturn": false
+        }],
         "valid-typeof": 2,
         "vars-on-top": 0,
         "wrap-iife": 0,
