--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "browserify": "^14.1.0",
-    "connect": "^3.6.0",
-    "connect-mount": "^1.0.0",
     "del": "^2.2.2",
     "envify": "^4.0.0",
     "eslint": "^3.19.0",
@@ -45,7 +43,6 @@
     "gulp-gzip": "^1.4.0",
     "gulp-help": "^1.6.1",
     "gulp-if-else": "^1.0.3",
-    "gulp-jsdoc3": "^1.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
     "gulp-replace": "^0.5.4",
@@ -54,8 +51,8 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "gulp-zip": "^4.0.0",
+    "jsdoc": "git+https://github.com/jvanveen/jsdoc.git#master",
     "jsdoc-rtd": "^1.0.3",
-    "serve-static": "^1.12.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vueify": "^9.4.1",
@@ -66,11 +63,13 @@
     "axios": "^0.16.1",
     "bulma": "^0.4.1",
     "font-awesome": "^4.7.0",
+    "translated": "^0.3.0",
     "vee-validate": "^2.0.0-rc.1",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.3.0",
     "vue-paginate": "^3.4.0",
     "vue-router": "^2.4.0",
+    "vue-translated": "^0.4.1",
     "vuejs-paginate": "^0.9.0",
     "vuelidate": "^0.4.3",
     "vuex": "^2.2.1"
