Update broken deps.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-envify": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-gzip": "^1.4.0",
     "gulp-help": "^1.6.1",
@@ -50,6 +51,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
+    "gulp-vuejs": "^1.0.7",
     "gulp-zip": "^4.0.0",
     "jsdoc": "git+https://github.com/jvanveen/jsdoc.git#master",
     "jsdoc-rtd": "^1.0.3",
