--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "browserify": "^14.1.0",
     "del": "^2.2.2",
     "envify": "^4.0.0",
@@ -54,7 +56,7 @@
     "gulp-vuejs": "^1.0.7",
     "gulp-zip": "^4.0.0",
     "jsdoc": "git+https://github.com/jvanveen/jsdoc.git#master",
-    "jsdoc-rtd": "^1.0.3",
+    "jsdoc-rtd": "^1.0.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vueify": "^9.4.1",
