Renamed templates dir.

--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-envify": "^1.0.0",
+    "gulp-fuet": "^1.0.9",
     "gulp-gh-pages": "^0.5.4",
     "gulp-gzip": "^1.4.0",
     "gulp-help": "^1.6.1",
     "gulp-if-else": "^1.0.3",
+    "gulp-insert": "^0.5.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
     "gulp-replace": "^0.5.4",
@@ -53,7 +55,6 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
-    "gulp-vuejs": "^1.0.7",
     "gulp-zip": "^4.0.0",
     "jsdoc": "git+https://github.com/jvanveen/jsdoc.git#master",
     "jsdoc-rtd": "^1.0.4",
@@ -67,15 +68,13 @@
     "axios": "^0.16.1",
     "bulma": "^0.4.1",
     "font-awesome": "^4.7.0",
-    "translated": "^0.3.0",
-    "vee-validate": "^2.0.0-rc.1",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.3.0",
-    "vue-paginate": "^3.4.0",
+    "vue-paginator2": "^1.0.2",
     "vue-router": "^2.4.0",
-    "vue-translated": "^0.4.1",
-    "vuejs-paginate": "^0.9.0",
+    "vue-tabcordion": "^1.0.1",
     "vuelidate": "^0.4.3",
-    "vuex": "^2.2.1"
+    "vuex": "^2.2.1",
+    "vuex-i18n": "^1.3.4"
   }
 }
