--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voipgrid-frontend",
-  "version": "3.0.0",
+  "version": "1.0.0",
   "private": true,
   "description": "VoIPGRID Frontend for API V2.",
   "main": "index.js",
@@ -56,11 +56,10 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "gulp-zip": "^4.0.0",
-    "jsdoc": "git+https://github.com/jvanveen/jsdoc.git#master",
-    "jsdoc-rtd": "^1.0.4",
+    "jsdoc": "git+https://github.com/jsdoc3/jsdoc.git#master",
+    "jsdoc-rtd": "^1.0.13",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "vueify": "^9.4.1",
     "watchify": "^3.9.0",
     "yargs": "^7.0.2"
   },
@@ -72,7 +71,7 @@
     "vue": "^2.3.0",
     "vue-paginator2": "^1.0.2",
     "vue-router": "^2.4.0",
-    "vue-shout": "^1.0.1",
+    "vue-shout": "^1.0.4",
     "vue-tabcordion": "^1.0.1",
     "vuelidate": "^0.4.3",
     "vuex": "^2.2.1",
