--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,10 @@
 {
-    "ecmaFeatures": {
-        "arrowFunctions":true,
-        "classes":true,
-        "spread":true
+    "parser": "espree",
+    "parserOptions": {
+        "ecmaVersion": 7,
+        "sourceType": "module",
+        "ecmaFeatures": {}
     },
-    "parser": "babel-eslint",
     "env": {
         "amd": false,
         "browser": true,
