--- a/.eslintrc
+++ b/.eslintrc
@@ -156,6 +156,7 @@
         "generator-star-spacing": 0,
         "guard-for-in": 0,
         "handle-callback-err": 0,
+        "indent": [2, 4, {"flatTernaryExpressions": true, "ObjectExpression": 1}],
         "init-declarations": 0,
         "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
         "lines-around-comment": 0,
@@ -173,7 +174,7 @@
         "operator-assignment": [0, "always"],
         "operator-linebreak": 0,
         "padded-blocks": 0,
-        "quote-props": 0,
+        "quote-props": [2, "as-needed"],
         "quotes": [1, "single"],
         "radix": 0,
         "require-yield": 0,
@@ -192,7 +193,7 @@
             ],
             "accessorPairPositioning": "getThenSet",
         }],
-        "sort-keys": [2, "asc", {"natural": true}],
+        "sort-keys": [2, "asc", {"natural": true, "caseSensitive": false}],
         "sort-vars": [2, {"ignoreCase": true}],
         "space-before-function-paren": [2, "never"],
         "space-in-brackets": [0, "never"],
