Add ssr logger, added initial cookie store hydration, added es6 minifier.

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "jsdoc-rtd": "^1.0.5",
     "vinyl-buffer": "^1.0.0",
@@ -71,11 +71,13 @@
     "connect-cookies": "0.0.0",
     "font-awesome": "^4.7.0",
     "gulp-nodemon": "^2.2.1",
+    "morgan": "^1.8.2",
     "request": "^2.81.0",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.4",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.4.2",
+    "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.0.5",
     "vue-paginator2": "^1.0.2",
     "vue-router": "^2.4.0",
