--- a/package.json
+++ b/package.json
@@ -68,13 +68,13 @@
     "connect-cookies": "0.0.0",
     "font-awesome": "^4.7.0",
     "gulp-nodemon": "^2.2.1",
+    "js-cookie": "^2.1.4",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.4",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.4.2",
-    "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.0.5",
     "vue-paginator2": "^1.0.2",
     "vue-router": "^2.4.0",
