Added translations, userform and partner client routing

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "global": "^4.3.2",
         "json-server": "^0.10.1",
         "lodash": "^3.10.1",
+        "prop-types": "^15.5.10",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
         "react-redux": "5.0.5",
+        "react-redux-multilingual": "^1.0.4",
         "react-router-dom": "^4.1.1",
         "react-select": "^1.0.0-rc.5",
         "react-tabs": "^1.1.0",
