--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "yargs": "^7.0.2"
   },
   "dependencies": {
-    "@3846masa/axios-cookiejar-support": "^0.1.1",
+    "@3846masa/axios-cookiejar-support": "git+https://github.com/jvanveen/axios-cookiejar-support#master",
     "axios": "^0.16.2",
     "bulma": "^0.5.0",
     "connect-cookies": "0.0.0",
