--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-redux-multilingual": "^1.0.4",
         "react-router-dom": "^4.1.1",
         "react-select": "^1.0.0-rc.5",
+        "react-table": "^6.5.3",
         "react-tabs": "^1.1.0",
         "redux": "^3.6.0",
         "redux-form": "^6.8.0",
