--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
         "axios": "^0.16.2",
         "babel-preset-stage-1": "^6.1.18",
         "bulma": "^0.4.2",
+        "chai": "^4.1.1",
+        "chai-jquery": "^2.0.0",
         "classnames": "^2.2.5",
+        "eslint-config-airbnb": "13.0.0",
         "global": "^4.3.2",
+        "jquery": "^3.2.1",
+        "jsdom": "^11.2.0",
         "json-server": "^0.10.1",
         "lodash": "^3.10.1",
         "prop-types": "^15.5.10",
         "react": "^15.5.4",
+        "react-addons-test-utils": "^15.6.0",
         "react-dom": "^15.5.4",
         "react-redux": "5.0.5",
         "react-redux-multilingual": "^1.0.4",
+        "react-router": "^4.2.0",
         "react-router-dom": "^4.1.1",
         "react-select": "^1.0.0-rc.5",
         "react-table": "^6.5.3",
@@ -40,11 +47,12 @@
         "css-loader": "0.26.0",
         "detect-port": "1.0.1",
         "dotenv": "2.0.0",
-        "eslint": "3.8.1",
+        "eslint": "^4.5.0",
+        "eslint-config-airbnb-base": "^11.3.2",
         "eslint-config-react-app": "^0.5.0",
         "eslint-loader": "1.6.0",
         "eslint-plugin-flowtype": "2.21.0",
-        "eslint-plugin-import": "2.0.1",
+        "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "2.2.3",
         "eslint-plugin-react": "6.4.1",
         "extract-text-webpack-plugin": "1.0.1",
@@ -83,7 +91,8 @@
         "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
-        "test": "node scripts/test.js --env=jsdom"
+        "test": "NODE_ENV=development mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.js'",
+        "test:watch": "npm run test -- --watch"
     },
     "jest": {
         "collectCoverageFrom": [
