Breadcrumb fixes, numerous styling fixes, added roboto.

--- a/package.json
+++ b/package.json
@@ -70,19 +70,20 @@
     "js-cookie": "^2.1.4",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
+    "roboto-fontface": "^0.8.0",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.4",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.4.2",
     "vue-i18n": "^7.0.5",
-    "vue-paginator2": "^1.0.2",
+    "vue-i18n-stash": "git+https://github.com/jvanveen/vue-i18n-stash.git#master",
+    "vue-paginator2": "^1.0.4",
     "vue-router": "^2.4.0",
     "vue-server-renderer": "^2.4.2",
-    "vue-shout": "^1.0.4",
+    "vue-shout": "^1.0.6",
     "vue-stash": "^2.0.1-beta",
-    "vue-tabcordion": "^1.0.1",
+    "vue-tabcordion": "^1.0.6",
     "vue-template-compiler": "^2.4.2",
-    "vuelidate": "^0.5.0",
-    "vuex-i18n-stash": "git+https://github.com/jvanveen/vuex-i18n-stash.git#master"
+    "vuelidate": "^0.5.0"
   }
 }
