--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "react-tabs": "^1.1.0",
         "redux": "^3.6.0",
         "redux-form": "^6.8.0",
-        "redux-promise": "^0.5.3"
+        "redux-promise": "^0.5.3",
+        "redux-thunk": "^2.2.0"
     },
     "devDependencies": {
         "autoprefixer": "6.5.1",
