Updated dependencies and fixed ESLint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
   "parser": "espree",
   "parserOptions": {
       "ecmaFeatures": {
-          "modules": true
+          "modules": false
       },
       "ecmaVersion": 8,
       "sourceType": "module"
