--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "chai": "^4.1.1",
         "chai-jquery": "^2.0.0",
         "classnames": "^2.2.5",
-        "eslint-config-airbnb": "13.0.0",
         "global": "^4.3.2",
         "jquery": "^3.2.1",
         "jsdom": "8.1.0",
@@ -48,14 +47,15 @@
         "css-loader": "0.26.0",
         "detect-port": "1.0.1",
         "dotenv": "2.0.0",
-        "eslint": "^4.5.0",
+        "eslint": "^4.6.1",
+        "eslint-config-airbnb": "^15.1.0",
         "eslint-config-airbnb-base": "^11.3.2",
         "eslint-config-react-app": "^0.5.0",
         "eslint-loader": "1.6.0",
         "eslint-plugin-flowtype": "2.21.0",
         "eslint-plugin-import": "^2.7.0",
-        "eslint-plugin-jsx-a11y": "2.2.3",
-        "eslint-plugin-react": "6.4.1",
+        "eslint-plugin-jsx-a11y": "^5.1.1",
+        "eslint-plugin-react": "^7.3.0",
         "extract-text-webpack-plugin": "1.0.1",
         "file-loader": "0.9.0",
         "filesize": "3.3.0",
