--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "prop-types": "^15.5.10",
         "proptypes": "^1.1.0",
         "react": "^15.6.1",
+        "react-breadcrumbs": "^1.6.6",
         "react-dom": "^15.6.1",
         "react-loadable": "^4.0.5",
         "react-redux": "^5.0.6",
         "react-redux-multilingual": "^1.0.4",
         "react-router-dom": "^4.2.2",
+        "react-router-dynamic-breadcrumbs": "^2.0.0",
         "react-select": "^1.0.0-rc.10",
         "react-table": "^6.5.3",
         "react-tabs": "^2.0.0",
