Update component naming, update package.json, fixes for phoneaccount views.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "bulma": "^0.5.0",
     "connect-cookies": "0.0.0",
     "font-awesome": "^4.7.0",
+    "fuet-notify": "^1.0.8",
+    "fuet-pagination": "^1.0.5",
+    "fuet-tabs": "^1.0.8",
     "gulp-nodemon": "git+https://github.com/jvanveen/gulp-nodemon.git#master",
     "js-cookie": "^2.1.4",
     "morgan": "^1.8.2",
@@ -76,13 +79,10 @@
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
     "vue": "^2.4.2",
     "vue-i18n": "^7.0.5",
-    "vue-i18n-stash": "git+https://github.com/jvanveen/vue-i18n-stash.git#master",
-    "vue-paginator2": "^1.0.4",
+    "vue-i18n-stash": "git+https://github.com/wearespindle/vue-stash-i18n#master",
     "vue-router": "^2.4.0",
     "vue-server-renderer": "^2.4.2",
-    "vue-shout": "^1.0.6",
     "vue-stash": "^2.0.1-beta",
-    "vue-tabcordion": "^1.0.6",
     "vue-template-compiler": "^2.4.2",
     "vuelidate": "^0.5.0"
   }
