--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-insert": "^0.5.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
@@ -55,6 +56,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "jsdoc-rtd": "^1.0.5",
+    "uglify-es": "^3.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0",
