Adding tests/mock-data. Add js-data.

--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-tape": "0.0.9",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "jsdoc-rtd": "^1.0.5",
+    "tap-colorize": "^1.2.0",
+    "tape": "^4.8.0",
     "uglify-es": "^3.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -67,23 +70,26 @@
     "axios": "^0.16.2",
     "bulma": "^0.5.0",
     "connect-cookies": "0.0.0",
+    "connect-redirection": "0.0.1",
     "font-awesome": "^4.7.0",
     "fuet-notify": "^1.0.8",
     "fuet-pagination": "^1.0.5",
     "fuet-tabs": "^1.0.8",
     "gulp-nodemon": "git+https://github.com/jvanveen/gulp-nodemon.git#master",
     "js-cookie": "^2.1.4",
+    "js-data": "^3.0.1",
+    "js-data-http": "^3.0.0",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
     "roboto-fontface": "^0.8.0",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.4",
     "vg-icons": "git+https://github.com/voipgrid/vg-icons#master",
-    "vue": "^2.4.2",
+    "vue": "^2.4.4",
     "vue-i18n": "^7.0.5",
     "vue-i18n-stash": "git+https://github.com/wearespindle/vue-stash-i18n.git#master",
-    "vue-router": "^2.4.0",
-    "vue-server-renderer": "^2.4.2",
+    "vue-router": "^2.7.0",
+    "vue-server-renderer": "^2.4.4",
     "vue-stash": "^2.0.1-beta",
     "vue-template-compiler": "^2.4.2",
     "vuelidate": "^0.5.0"
