--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "VoIPGRID SPA for API V2.",
   "main": "index.js",
+  "module": "src/js/browser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -50,6 +51,7 @@
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-rollup": "^2.15.0",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
@@ -57,6 +59,11 @@
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.0.0",
     "jsdoc-rtd": "^1.0.5",
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-includepaths": "^0.2.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
     "tap-colorize": "^1.2.0",
     "tape": "^4.8.0",
     "uglify-es": "^3.1.1",
