--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-envify": "^1.0.0",
+    "gulp-file": "^0.3.0",
     "gulp-fuet": "^1.0.9",
     "gulp-gh-pages": "^0.5.4",
     "gulp-gzip": "^1.4.0",
