Initial js-data with http adapter.

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
         "I18nStore": true,
         "translations": true,
         "__state": true,
+        "JSData": true,
         "_Vuex"
     },
     "plugins": [
