--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "dependencies": {
     "@3846masa/axios-cookiejar-support": "git+https://github.com/jvanveen/axios-cookiejar-support#master",
     "axios": "^0.16.2",
+    "browserify-resolutions": "^1.1.0",
     "bulma": "^0.5.0",
     "connect-cookies": "0.0.0",
     "connect-redirection": "0.0.1",
