--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "react-scripts": "^1.0.13"
-    },
-    "dependencies": {
-        "axios": "^0.16.2",
-        "babel-core": "^6.26.0",
-        "babel-jest": "^21.0.2",
-        "bulma": "^0.5.2",
+        "react-scripts": "^1.0.13",
+        "react-styleguidist": "^6.0.26",
         "chai": "^4.1.2",
         "chai-jquery": "^2.0.0",
         "jquery": "^3.2.1",
         "jsdom": "^11.2.0",
+        "babel-jest": "^21.0.2"
+    },
+    "dependencies": {
+        "axios": "^0.16.2",
+        "babel-core": "^6.26.0",
+        "bulma": "^0.5.2",
         "node-sass-chokidar": "^0.0.3",
         "npm-run-all": "^4.1.1",
         "prop-types": "^15.5.10",
@@ -41,7 +42,8 @@
         "start": "npm-run-all -p watch-css start-js",
         "build": "npm run build-css && react-scripts build",
         "test": "NODE_ENV=development react-scripts test",
-        "eject": "react-scripts eject"
+        "styleguide": "styleguidist server",
+        "styleguide:build": "styleguidist build"
     },
     "jest": {
         "collectCoverageFrom": [
