--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "react-scripts": "^1.0.13",
-        "react-styleguidist": "^6.0.26",
+        "babel-jest": "^21.0.2",
         "chai": "^4.1.2",
         "chai-jquery": "^2.0.0",
+        "eslint-config-prettier": "^2.6.0",
+        "eslint-plugin-prettier": "^2.3.1",
         "jquery": "^3.2.1",
         "jsdom": "^11.2.0",
-        "babel-jest": "^21.0.2"
+        "prettier": "^1.7.3",
+        "react-scripts": "^1.0.13",
+        "react-styleguidist": "^6.0.26"
     },
     "dependencies": {
         "axios": "^0.16.2",
