--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "redux": "^3.7.2",
         "redux-form": "^7.0.4",
         "redux-promise": "^0.5.3",
-        "redux-thunk": "^2.2.0"
+        "redux-thunk": "^2.2.0",
+        "styled-components": "^2.2.0"
     },
     "scripts": {
         "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
