--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "dependencies": {
         "axios": "^0.16.2",
         "babel-core": "^6.26.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-register": "^6.26.0",
         "bulma": "^0.5.2",
+        "express": "^4.16.1",
         "node-sass-chokidar": "^0.0.3",
         "npm-run-all": "^4.1.1",
+        "path": "^0.12.7",
         "prop-types": "^15.5.10",
         "proptypes": "^1.1.0",
         "react": "^15.6.1",
