--- a/package.json
+++ b/package.json
@@ -1,63 +1,61 @@
 {
-    "name": "voipgrid-react",
-    "version": "0.1.0",
-    "private": true,
-    "devDependencies": {
-        "babel-jest": "^21.0.2",
-        "chai": "^4.1.2",
-        "chai-jquery": "^2.0.0",
-        "eslint-config-prettier": "^2.6.0",
-        "eslint-plugin-prettier": "^2.3.1",
-        "jquery": "^3.2.1",
-        "jsdom": "^11.2.0",
-        "prettier": "^1.7.3",
-        "react-scripts": "^1.0.13",
-        "react-styleguidist": "^6.0.26"
-    },
-    "dependencies": {
-        "axios": "^0.16.2",
-        "babel-core": "^6.26.0",
-        "babel-preset-react": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "bulma": "^0.5.2",
-        "express": "^4.16.1",
-        "node-sass-chokidar": "^0.0.3",
-        "npm-run-all": "^4.1.1",
-        "path": "^0.12.7",
-        "prop-types": "^15.5.10",
-        "proptypes": "^1.1.0",
-        "react": "^15.6.1",
-        "react-breadcrumbs": "^1.6.6",
-        "react-dom": "^15.6.1",
-        "react-loadable": "^4.0.5",
-        "react-redux": "^5.0.6",
-        "react-redux-multilingual": "^1.0.4",
-        "react-router-dom": "^4.2.2",
-        "react-router-dynamic-breadcrumbs": "^2.0.0",
-        "react-select": "^1.0.0-rc.10",
-        "react-table": "^6.5.3",
-        "react-tabs": "^2.0.0",
-        "redux": "^3.7.2",
-        "redux-form": "^7.0.4",
-        "redux-promise": "^0.5.3",
-        "redux-thunk": "^2.2.0",
-        "styled-components": "^2.2.0"
-    },
-    "scripts": {
-        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts start",
-        "start": "npm-run-all -p watch-css start-js",
-        "build": "npm run build-css && react-scripts build",
-        "test": "NODE_ENV=development react-scripts test",
-        "styleguide": "styleguidist server",
-        "styleguide:build": "styleguidist build"
-    },
-    "jest": {
-        "collectCoverageFrom": [
-            "src/**/*.{js,jsx}",
-            "!<rootDir>/node_modules/",
-            "!src/assets/vendor/**/*.js"
-        ]
-    }
+  "name": "voipgrid-react",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "babel-jest": "^21.0.2",
+    "chai": "^4.1.2",
+    "chai-jquery": "^2.0.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "express": "^4.16.1",
+    "jquery": "^3.2.1",
+    "jsdom": "^11.2.0",
+    "prettier": "^1.7.3",
+    "react-scripts": "1.0.14",
+    "react-styleguidist": "^6.0.26"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "babel-core": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.1",
+    "path": "^0.12.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-loadable": "^5.2.4",
+    "react-redux": "^5.0.6",
+    "react-redux-multilingual": "^1.0.4",
+    "react-router-dom": "^4.2.2",
+    "react-select": "^1.0.0-rc.10",
+    "react-table": "^6.6.0",
+    "react-tabs": "^2.1.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.1"
+  },
+  "scripts": {
+    "build-css":
+      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "react-scripts build",
+    "test": "NODE_ENV=development react-scripts test",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/",
+      "!src/assets/vendor/**/*.js"
+    ]
+  }
 }
