--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "fuet-notify": "^1.0.8",
     "fuet-pagination": "^1.0.5",
     "fuet-tabs": "^1.0.8",
+    "gulp-flatten": "^0.3.1",
     "gulp-nodemon": "git+https://github.com/jvanveen/gulp-nodemon.git#master",
     "js-cookie": "^2.1.4",
     "js-data": "^3.0.1",
@@ -84,7 +85,7 @@
     "roboto-fontface": "^0.8.0",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.4",
-    "vg-icons": "git+https://github.com/voipgrid/vg-icons.git#master",
+    "vg-icons": "^0.1.7",
     "vue": "^2.4.4",
     "vue-i18n": "^7.0.5",
     "vue-i18n-stash": "git+https://github.com/wearespindle/vue-stash-i18n.git#master",
