added the collapsing of the nav when clicked and updated the proxy for the new url of the API mock

--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   },
   "proxy": {
     "/api/v2/": {
-      "target": "http://localhost:8888/",
-      "pathRewrite": {
-        "/api/v2": ""
-      }
+      "target": "http://localhost:8888"
     }
   },
   "scripts": {
