--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "husky": "^0.14.3",
+    "i18next": "^10.2.1",
+    "i18next-fetch-backend": "^0.1.0",
     "lint-staged": "^5.0.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.8.2",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-router": "^4.2.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-i18next": "^7.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
@@ -30,6 +32,9 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json}": ["prettier --single-quote --printWidth 100 --write", "git add"]
+    "src/**/*.{js,jsx,json}": [
+      "prettier --single-quote --printWidth 100 --write",
+      "git add"
+    ]
   }
 }
