--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.8.2",
+    "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-i18next": "^7.0.2",
