--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "dependencies": {
     "husky": "^0.14.3",
-    "i18next": "^10.2.1",
+    "i18next": "^11.3.1",
     "i18next-fetch-backend": "^0.1.0",
-    "lint-staged": "^5.0.0",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
-    "prettier": "^1.8.2",
-    "query-string": "^5.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-i18next": "^7.0.2",
+    "lint-staged": "^7.1.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.12.1",
+    "query-string": "^6.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-i18next": "^7.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "^1.1.4"
   },
   "proxy": {
     "/api/v2/": {
